# rust-fibonacci-generator

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
